--- a/animal-schelter/src/components/card/card.css
+++ b/animal-schelter/src/components/card/card.css
@@ -32,7 +32,12 @@
   
   .category .content h3 {
     margin-bottom: 10px; /* add some space between h3 and button */
-  }
+    font-family: 'Alfa Slab One', cursive;     
+       font-size: 25px;
+       text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
+       color: rgb(216, 184, 6);
+    }
   
   
   
